--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "youtube_channel_id": "UCmk-2MI1zxYkiFz7w012ZCg",
     "twitch_channel": "Indulgence82",
-    "rumble_live_id": "YOUR_RUMBLE_LIVE_ID",
-    "rumble_chat_id": "YOUR_RUMBLE_CHAT_ID"
+    "rumble_live_id": "Indulgence82",
+    "rumble_chat_id": "Indulgence82"
 }
