--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "youtube_channel_id": "UCmk-2MI1zxYkiFz7w012ZCg",
+	"youtube_api_key": "AIzaSyDWA5ktLdT1wfRBjXZ0xTvYih2BbMXmmlQ",
     "twitch_channel": "Indulgence82",
     "rumble_live_id": "Indulgence82",
     "rumble_chat_id": "Indulgence82"
