--- a/Kirsche/config.json
+++ b/Kirsche/config.json
@@ -2,6 +2,7 @@
     "youtube_channel_id": "UC3N8ceQAY0F_kJG0aJNttLg",
 	"youtube_api_key": "AIzaSyDWA5ktLdT1wfRBjXZ0xTvYih2BbMXmmlQ",
     "twitch_channel": "Kirsche",
+	"twitch_token": "66yuv2abae33nldixyuwykp9dn4b22",
     "rumble_live_id": "YOUR_RUMBLE_LIVE_ID",
     "rumble_chat_id": "YOUR_RUMBLE_CHAT_ID"
 }
