--- a/config.json
+++ b/config.json
@@ -4,5 +4,5 @@
     "twitch_channel": "Indulgence82",
     "rumble_live_id": "Indulgence82",
     "rumble_chat_id": "Indulgence82",
-	"x_channel": "Indulgence82"
+	"x_channel": "@Indulgence82"
 }
