--- a/Kirsche/config.json
+++ b/Kirsche/config.json
@@ -5,5 +5,5 @@
 	"twitch_clientID": "66yuv2abae33nldixyuwykp9dn4b22",
     "rumble_live_id": "YOUR_RUMBLE_LIVE_ID",
     "rumble_chat_id": "YOUR_RUMBLE_CHAT_ID",
-	"x_channel": "@KirscheVerstahl"
+	"x_channel": "KirscheVerstahl"
 }
