--- a/Kirsche/config.json
+++ b/Kirsche/config.json
@@ -1,6 +1,7 @@
 {
     "youtube_channel_id": "UC3N8ceQAY0F_kJG0aJNttLg",
 	"youtube_api_key": "AIzaSyDWA5ktLdT1wfRBjXZ0xTvYih2BbMXmmlQ",
+	"streamelements_id": "kirsche",
     "twitch_channel": "Kirsche",
 	"twitch_clientID": "66yuv2abae33nldixyuwykp9dn4b22"
 }
