--- a/Pippa/config.json
+++ b/Pippa/config.json
@@ -2,6 +2,6 @@
     "youtube_channel_id": "UCJ46YTYBQVXsfsp8-HryoUA",
 	"youtube_api_key": "AIzaSyDWA5ktLdT1wfRBjXZ0xTvYih2BbMXmmlQ",
     "twitch_channel": "Pippa",
-    "rumble_live_id": "",
-    "rumble_chat_id": ""
+    "rumble_live_id": "pippa",
+    "rumble_chat_id": "pippa"
 }
