--- a/Pippa/config.json
+++ b/Pippa/config.json
@@ -1,5 +1,6 @@
 {
     "youtube_channel_id": "UCJ46YTYBQVXsfsp8-HryoUA",
+	"streamelements_id": "pippa",
 	"youtube_api_key": "AIzaSyDWA5ktLdT1wfRBjXZ0xTvYih2BbMXmmlQ",
     "twitch_channel": "Pippa",
     "rumble_live_id": "pippa",
