--- a/Pippa/config.json
+++ b/Pippa/config.json
@@ -3,6 +3,7 @@
 	"streamelements_id": "pippa",
 	"youtube_api_key": "AIzaSyDWA5ktLdT1wfRBjXZ0xTvYih2BbMXmmlQ",
     "twitch_channel": "Pippa",
-    "rumble_live_id": "pippa",
-    "rumble_chat_id": "pippa"
+    "rumble_live_id": "",
+    "rumble_chat_id": "",
+	"kick_live_id": "pippa"
 }
