--- a/Kirsche/config.json
+++ b/Kirsche/config.json
@@ -4,5 +4,5 @@
 	"streamelements_id": "kirsche",
     "twitch_channel": "Kirsche",
 	"twitch_clientID": "66yuv2abae33nldixyuwykp9dn4b22",
-	"kick_live_id": "Kirsche"
+	"kick_live_id": ""
 }
