--- a/Pippa/config.json
+++ b/Pippa/config.json
@@ -5,5 +5,6 @@
     "twitch_channel": "Pippa",
     "rumble_live_id": "",
     "rumble_chat_id": "",
+	"watchalong": "pippa",
 	"kick_live_id": "pippa"
 }
