--- a/Kirsche/config.json
+++ b/Kirsche/config.json
@@ -6,5 +6,5 @@
     "twitch_channel": "Kirsche",
 	"twitch_clientID": "66yuv2abae33nldixyuwykp9dn4b22",
 	"watchalong": "",
-	"kick_live_id": ""
+	"kick_live_id": "kirsche"
 }
