--- a/Sleepy/config.json
+++ b/Sleepy/config.json
@@ -2,10 +2,10 @@
     "youtube_channel_id": "UC3aEtHpGzCFvoSn_wRWzgZQ",
 	"creator_name": "Eepy Sleepy",
 	"streamelements_id": "eepysleepy",
-	"youtube_api_key": "UC3aEtHpGzCFvoSn_wRWzgZQ",
+	"youtube_api_key": "AIzaSyDWA5ktLdT1wfRBjXZ0xTvYih2BbMXmmlQ",
     "twitch_channel": "eepysleepy",
     "rumble_live_id": "",
     "rumble_chat_id": "",
-	"watchalong": "sleepy",
+	"watchalong": "",
 	"kick_live_id": ""
 }
