--- a/ChisakaAiri/config.json
+++ b/ChisakaAiri/config.json
@@ -4,7 +4,7 @@
 	"creator_name": "Chisaka Airi",
 	"youtube_channel_id": "UC5qlAhrec6-0J-K3zmhNPPQ",
 	"youtube_api_key": "AIzaSyDWA5ktLdT1wfRBjXZ0xTvYih2BbMXmmlQ",
-    "twitch_channel": "",
+    "twitch_channel": "ChisakaAiri",
     "rumble_live_id": "",
     "rumble_chat_id": "",
 	"kick_live_id": ""
